# scale-example

./: .gitignore  README.md  pixi.toml
compiler/: recipe.yaml
example/: CMakeLists.txt  example.cu
